--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,19 @@ body {
   background-color: #f9f7fe;
   font-family: "roboto", sans-serif;
 }
+a {
+  color: #885df1;
+}
+.data-container {
+  display: flex;
+  justify-content: space-between;
+}
 
+.city-container {
+  margin: 0;
+  line-height: 48px;
+  font-size: 38px;
+}
 .weather-container {
   background: white;
   max-width: 600px;
@@ -10,4 +22,72 @@ body {
   padding: 30px;
   box-shadow: 0 30px 50 rgba(65, 50, 100, 0.08);
   border-radius: 16px;
+}
+
+.details-container {
+  font-size: 16px;
+  line-height: 20px;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 25px;
+  font-weight: 400;
+}
+
+.details-container strong {
+  color: #f65282;
+}
+.weather-icon-container {
+  display: flex;
+}
+.temp-value-container {
+  font-size: 88px;
+  font-weight: bold;
+}
+.icon-container {
+  font-size: 44px;
+  margin-top: 22px;
+  margin-left: 10px;
+}
+.unit-container {
+  margin-top: 16px;
+  font-size: 28px;
+}
+
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
+}
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  padding: 16px 20px;
+  font-size: 16px;
+}
+
+.search-form-button {
+  background-color: #885df1;
+  padding: 16px 30px;
+  border: none;
+  border-radius: 6px;
+  color: white;
+  margin-left: 5px;
+  font-size: 16px;
+}
+
+main {
+  padding: 30px 0;
+}
+
+.data-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.6);
 }
