--- a/src/styles.css
+++ b/src/styles.css
@@ -57,6 +57,32 @@ a {
   margin-top: 6px;
   font-size: 28px;
 }
+.Weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.Weather-forecast-date {
+  text-align: center;
+  color: rgb(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.Weather-forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+.Weather-forecast-temperature {
+  text-align: center;
+  color: #f65282;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+.Weather-forecast-temperatures {
+  padding: 0 10px;
+}
 
 header {
   border-bottom: 1px solid #f9f7fe;
